feat: rename project to Paste Go and update related files; remove XML parser and its tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         
         {
-            "name": "Extension: Run Paste Forge",
+            "name": "Extension: Run Paste Go",
             "type": "extensionHost",
             "request": "launch",
             "args": [
