fix: add activation event for smart paste command in package.json

--- a/extension/package.json
+++ b/extension/package.json
@@ -17,7 +17,9 @@
   ],
   "keywords": ["paste", "go", "smart paste", "ai", "code generation"],
   "icon": "icon.png",
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:paste-go.smartPaste"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
